# ContentGuard

./: .dockerignore  .gitignore  Dockerfile  PRODUCT_DOCUMENT.md  README.md  TESTING.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/samples/audio/: ai_synth_melody_01.analysis.json  ai_synth_melody_02.analysis.json  bg_music_commercial_01.analysis.json  bg_music_commercial_02.analysis.json  commentary_speech_01.analysis.json  commentary_speech_02.analysis.json  edu_lecture_01.analysis.json  edu_lecture_02.analysis.json  manifest.json
server/: __init__.py  app.py  case_generator.py  environment.py  grader.py  tasks.py
server/skills/: __init__.py  audio.py  precompute.py  synthetic.py
tests/: conftest.py  test_case_generator.py  test_environment.py  test_grader.py  test_models.py  test_skills.py
